--- a/myideas.html
+++ b/myideas.html
@@ -52,7 +52,7 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="../index.html" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="index.html" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#codechef" class="nav-link scrollto"><i class="bx bi-terminal"></i> <span>code chef</span></a></li>
           <li><a href="#leetcode" class="nav-link scrollto"><i class="bx bi-terminal"></i> <span>leet code</span></a></li>
           <li><a href="#hackerrank" class="nav-link scrollto"><i class="bx bi-terminal"></i> <span>Hacker Rank</span></a></li>
